@@ -1,4 +1,17 @@
 #!/bin/bash
+# Copyright 2025 Tigris Data, Inc.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 PROXY_PORT=${PROXY_PORT:-8080}
 
@@ -13,7 +26,9 @@ jclouds.credential=bar
 jclouds.regions=us-west-2
 EOF
 
-PROXY_BIN="java -DLOG_LEVEL=trace -Djclouds.wire=debug -jar s3proxy.jar --properties s3proxy.properties"
+p=`dirname $0`
+
+PROXY_BIN="java -Xmx8g --add-opens java.base/java.lang=ALL-UNNAMED -DLOG_LEVEL=trace -Djclouds.wire=debug -jar s3proxy.jar --properties $p/s3proxy.properties"
 export S3CMD_ARGS="--access_key=foo --secret_key=bar"
 export AWS_ACCESS_KEY_ID=foo
 export AWS_SECRET_ACCESS_KEY=bar
@@ -42,6 +57,10 @@ _s3cmd() {
   --host-bucket="" \
   --host="http://localhost:$PROXY_PORT" \
   "$@"
+}
+
+_aws_cli() {
+  aws s3 --endpoint-url="$ENDPOINT" "$@"
 }
 
 _s3cmd mb s3://test
