@@ -1,4 +1,19 @@
 #!/bin/bash
+# Copyright 2025 Tigris Data, Inc.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+set -x
 
 cd $(dirname $0)/..
 
@@ -18,7 +33,7 @@ if [ $CLOUD == "s3" ]; then
         echo jclouds.provider=filesystem >>test/s3proxy_test.properties
         echo jclouds.filesystem.basedir=/tmp/s3proxy >>test/s3proxy_test.properties
     fi
-    PROXY_BIN="java -jar s3proxy.jar --properties test/s3proxy_test.properties"
+    PROXY_BIN="java -Xmx8g --add-opens java.base/java.lang=ALL-UNNAMED -jar s3proxy.jar --properties test/s3proxy_test.properties"
     export AWS_ACCESS_KEY_ID=foo
     export AWS_SECRET_ACCESS_KEY=bar
     export ENDPOINT=http://localhost:$PROXY_PORT
